individual chalenges completed bronze

--- a/challenge_vectors_matrices/Review_Vectors.ipynb
+++ b/challenge_vectors_matrices/Review_Vectors.ipynb
@@ -91,15 +91,34 @@
    "execution_count": null,
    "id": "229e6313",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total sales this year is: 20348107.40\n"
+     ]
+    }
+   ],
    "source": [
-    "# Complete this function to print the total sales\n",
     "def compute_total_sales(df):\n",
-    "    # TO DO\n",
-    "    pass\n",
-    "    return # TO DO\n",
+    "    price_col = next((c for c in df.columns\n",
+    "                      if c.strip().lower() in (\"unit price\", \"unit_price\", \"price\")), None)\n",
+    "    qty_col   = next((c for c in df.columns\n",
+    "                      if c.strip().lower() in (\"sales quantity\", \"sales_quantity\", \"quantity sold\",\n",
+    "                                               \"quantity_sold\", \"quantity\", \"qty\")), None)\n",
+    "    if price_col is None or qty_col is None:\n",
+    "        raise KeyError(\"Expected columns like 'Unit Price' and 'Sales Quantity'.\")\n",
     "\n",
-    "print(\"The total sales this year is: {:.2f}\".format(compute_total_sales(external_df)))"
+    "    price = pd.to_numeric(df[price_col], errors=\"coerce\").fillna(0)\n",
+    "    qty   = pd.to_numeric(df[qty_col],   errors=\"coerce\").fillna(0)\n",
+    "\n",
+    "    total = float(price.dot(qty))  \n",
+    "    pass\n",
+    "    return total  \n",
+    "\n",
+    "print(\"The total sales this year is: {:.2f}\".format(compute_total_sales(external_df)))\n",
+    "\n"
    ]
   },
   {
@@ -107,7 +126,19 @@
    "execution_count": null,
    "id": "90c21a45-eab8-4f35-bd7d-298932aa4f08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def compute_total_sales(df):\n",
+      "    total_sales = df['Unit_Price'].dot(df['Sales_Quantity'])\n",
+      "    return total_sales\n",
+      "\n",
+      "The total sales this year is: 20348107.40\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the following code to show one of the possible answer\n",
     "print(base64.b64decode(\"ZGVmIGNvbXB1dGVfdG90YWxfc2FsZXMoZGYpOgogICAgdG90YWxfc2FsZXMgPSBkZlsnVW5pdF9QcmljZSddLmRvdChkZlsnU2FsZXNfUXVhbnRpdHknXSkKICAgIHJldHVybiB0b3RhbF9zYWxlcwoKVGhlIHRvdGFsIHNhbGVzIHRoaXMgeWVhciBpczogMjAzNDgxMDcuNDA=\").decode())"
@@ -135,25 +166,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5028e108",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth: 137616.03\n",
+      "Growth Rate: 0.68 %\n"
+     ]
+    }
+   ],
    "source": [
-    "# Complete these two function to print the growth and growth rate\n",
     "\n",
     "def compute_growth(df):\n",
-    "    # TO DO\n",
+    "    total_this = df['Unit_Price'].dot(df['Sales_Quantity'])\n",
+    "    total_last = df['Unit_Price_Last_Year'].dot(df['Sales_Quantity_Last_Year'])\n",
+    "    growth = float(total_this - total_last)\n",
     "    pass\n",
-    "    return # TO DO\n",
+    "    return growth  \n",
     "\n",
     "def compute_growth_rate(df):\n",
-    "    # TO DO\n",
+    "    total_this = df['Unit_Price'].dot(df['Sales_Quantity'])\n",
+    "    total_last = df['Unit_Price_Last_Year'].dot(df['Sales_Quantity_Last_Year'])\n",
+    "    growth = total_this - total_last\n",
+    "    rate = 0.0 if total_last == 0 else float(growth / total_last * 100)\n",
     "    pass\n",
-    "    return # TO DO\n",
+    "    return rate  \n",
     "\n",
-    "print(\"Growth: {:.2f}\".format( compute_growth(external_df)))\n",
-    "print(\"Growth Rate: {:.2f} %\".format( compute_growth_rate(external_df)))"
+    "print(\"Growth: {:.2f}\".format(compute_growth(external_df)))\n",
+    "print(\"Growth Rate: {:.2f} %\".format(compute_growth_rate(external_df)))\n"
    ]
   },
   {
